--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>mbrothersxy group</title>
+    <title>mbrothers-xy group</title>
     <meta content="consulting" name="description" />
     <meta content="engineering, consulting" name="keywords" />
 
@@ -79,7 +79,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"sendmessage","qid":"2","text":
         class="container d-flex align-items-center justify-content-lg-between"
       >
         <h1 class="logo me-auto me-lg-0">
-          <a href="index.html">mbrothersxy group</a>
+          <a href="index.html">mbrothers-xy group</a>
         </h1>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
@@ -140,7 +140,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"sendmessage","qid":"2","text":
               <p>About Us</p>
               </div>
               <p class="fst-italic">
-                mbrothersxygroup is a group company that supports its
+                mbrothers-xy group is a group company that supports its
                 subsidiaries or partners, is heavily vested in engineering,
                 process plant, Transport and automation, in the areas of EPCD
                 for Electrical, Mechanical, Control and Instrumentation
@@ -238,12 +238,12 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"sendmessage","qid":"2","text":
         <div class="container" data-aos="fade-up">
           <div class="row no-gutters">
             <div
-              class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"
+              class="image col-xl-6 d-flex align-items-stretch justify-content-center justify-content-lg-start"
               data-aos="fade-right"
               data-aos-delay="100"
             ></div>
             <div
-              class="col-xl-7 ps-4 ps-lg-5 pe-4 pe-lg-1 d-flex align-items-stretch"
+              class="col-xl-6 ps-4 ps-lg-5 pe-4 pe-lg-1 d-flex align-items-stretch"
               data-aos="fade-left"
               data-aos-delay="100"
             >
@@ -333,9 +333,8 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"sendmessage","qid":"2","text":
           <div class="row">
             <div>
               <p class="service-p">
-                We offer specialized consulting skills to assist companies with
-                implementation, maintenance and optimization of automation and
-                control systems across different sectors:
+                We offer specialised engineering know-how and consulting services to assist companies with
+                implementation, maintenance and optimization of physical assets across different sectors:
               </p>
             </div>
 
