--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"sendmessage","qid":"2","text":
 
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <span>mbrothersxy Group</span>
+          &copy; Copyright <span>mbrothers-xy Group</span>
         </div>
         <div class="credits">
           made by <a href="https://luzannesmith.co.za">luzanne</a>
